fixed up and added some recipe samples. styled a little and will use bootstrap later on.

--- a/styling.css
+++ b/styling.css
@@ -6,13 +6,11 @@ body {
 }
 
 #heading {
-  background-color: white;
+  background-color: rgb(61, 163, 35);
   padding: 20px 25px;
-  background-color: #333;
 }
 
 h2 {
-  color: white;
   font-family: Helvetica, Arial;
 }
 
@@ -24,13 +22,12 @@ nav {
 a {
   text-decoration: none;
   margin-right: 25px;
-  color: white;
+  color: #333;
   font-size: 1.25em;
-  text-shadow: .5px .5px white;
 }
 
 a:hover {
-  color: #aaa;
+  color: white;
   text-shadow: none;
 }
 
@@ -45,4 +42,16 @@ a:hover {
 
 #hot-topics {
   font-family: 'Oxygen', Helvetica, Arial, sans-serif;
+}
+
+.recipe-boxes {
+  width: 28%;
+  height: 100%;
+  padding: 10px 5px;
+  border: 2px solid #333;
+  background: rgb(61, 163, 35);
+  margin-right: 2%;
+  margin-left: 2%;
+  margin-top: 2%;
+  display: inline-block;
 }
